--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
     <body id="app">
         <nav class="navbar navbar-light bg-light"><span class="navbar-brand mb-0 h1">PLOG</span></nav>
         <div class="container-fluid">
-            <div class="row m-0 p-5">
+            <div class="row my-2">
                 <div id="section1">Copy Text</div>
             </div>
-            <div class="row m-0 p-5">
+            <div class="row">
                 <div id="section2">Copy Text</div>
             </div>
         </div>
