adding refresh content to 60

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <!-- Required meta tags -->
         <meta charset="utf-8">
         <!--just for auto-refresh or redirect use the following meta tag-->
-        <!-- <meta http-equiv="refresh" content="15" /> -->
+        <meta http-equiv="refresh" content="60" />
         <!--<meta http-equiv="refresh" content="0; url=http://website.com/" />-->
         <!-- For IE -->
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
