adding new version button

--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
             <div class="row">
                 <div id="section2">Copy Text</div>
             </div>
+            <div class="row">
+                <div id="section3">Copy Text</div>
+            </div>
         </div>
         <!-- Optional JavaScript -->
         <script src="assets/js/connect.js"></script>
