--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
             <div class="row my-2">
                 <div id="section1">Copy Text</div>
             </div>
-            <div class="row">
+            <div class="row p-2">
                 <div id="section2">Copy Text</div>
             </div>
-            <div class="row">
+            <div class="row p-2">
                 <div id="section3">Copy Text</div>
             </div>
         </div>
