--- a/index.html
+++ b/index.html
@@ -18,50 +18,57 @@
 <!--[if IE 9 ]><html class="no-js oldie ie9" lang="en"> <![endif]-->
 <!--[if (gte IE 9)|!(IE)]><!-->
 
-<html class="no-js" dir="ltr" lang="en-US"> <!--<![endif]-->
-    <head>
-        <title>PLOG</title>
-        <!-- Required meta tags -->
-        <meta charset="utf-8">
-        <!--just for auto-refresh or redirect use the following meta tag-->
-        <meta http-equiv="refresh" content="61">
-        <!--<meta http-equiv="refresh" content="0; url=http://website.com/" />-->
-        <!-- For IE -->
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <!--mobile specific metas-->
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        
-        <!--basic page needs-->
-        <meta name="author" content="#DESAIGNER" />
-        <meta name="description" content="¯\_(ツ)_/¯"/> 
-        <meta name="keywords" content="Project Log"/>
-        
-        <!-- Bootstrap CSS -->
-        <link rel="stylesheet" href="assets/css/bootstrap.css">
+<html class="no-js" dir="ltr" lang="en-US">
+<!--<![endif]-->
 
-    </head>
-    <body id="app">
-        <nav class="navbar navbar-light bg-light"><span class="navbar-brand mb-0 h1">PLOG</span></nav>
-        <div class="container-fluid">
-            <div class="row my-2">
-                <div id="section1">Copy Text</div>
-            </div>
-            <div class="row p-2">
-                <div id="section2">Copy Text</div>
-            </div>
-            <div class="row p-2">
-                <div id="section3">Copy Text</div>
-            </div>
+<head>
+    <title>PLOG</title>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <!--just for auto-refresh or redirect use the following meta tag-->
+    <meta http-equiv="refresh" content="61">
+    <!--<meta http-equiv="refresh" content="0; url=http://website.com/" />-->
+    <!-- For IE -->
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <!--mobile specific metas-->
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!--basic page needs-->
+    <meta name="author" content="#DESAIGNER" />
+    <meta name="description" content="¯\_(ツ)_/¯" />
+    <meta name="keywords" content="Project Log" />
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="assets/css/bootstrap.css">
+
+</head>
+
+<body id="app">
+    <nav class="navbar navbar-light bg-light"><span class="navbar-brand mb-0 h1">PLOG</span></nav>
+    <div class="container-fluid">
+        <div class="row my-2">
+            <div id="section1" data-toggle="tooltip" data-placement="bottom" title="CLICK TO COPY THE CODE"></div>
         </div>
-        <!-- Optional JavaScript -->
-        <script src="assets/js/connect.js"></script>
-        <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-        <script src="assets/js/jQuery.js"></script>
-        <script src="assets/js/popper.js"></script>
-        <script src="assets/js/bootstrap.js"></script>
-        <script src="assets/js/moment.js"></script>
-        <script src="assets/js/main.js"></script>
-    </body>
+        <div class="row p-2 mr-3 float-left">
+            <div id="section2" data-toggle="tooltip" data-placement="bottom" title="YEAR QUARTER WEEK"></div>
+        </div>
+        <div class="row p-2 mr-3 float-left">
+            <div id="section3" data-toggle="tooltip" data-placement="bottom" title="YEAR QUARTER WEEK DAY HOUR MINUTE"></div>
+        </div>
+        <div class="row p-2 mr-3 float-left">
+            <div id="section4" data-toggle="tooltip" data-placement="bottom" title="YEAR MONTH DATE HOUR MINUTE SECOND"></div>
+        </div>
+    </div>
+    <!-- Optional JavaScript -->
+    <script src="assets/js/connect.js"></script>
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="assets/js/jQuery.js"></script>
+    <script src="assets/js/popper.js"></script>
+    <script src="assets/js/bootstrap.js"></script>
+    <script src="assets/js/moment.js"></script>
+    <script src="assets/js/main.js"></script>
+
+</body>
 
 <!--
     ╥╥  DESIGNED AND DEVELOPED BY...
