changing design signature

--- a/index.html
+++ b/index.html
@@ -79,10 +79,15 @@
 ║║  ║║ ║║         ║║ ║║  ║║ ║║ ║║  ║║ ║║  ║║
 ║║  ║║ ║║         ║║ ║║  ║║ ║║ ║║  ║║ ║║  ║║
 ║║  ║║ ╙╙──── ────╜╜ ╙╙──╜╜ ║║ ╙╙──╫╫ ╜╜  ║║
-║║  ║║  .STUDIO             ║║     ║║     ╙╙
+║║  ║║  .STUDIO             ║║     ║║     ╙╙ LLC
 ╙╙──╜╜  SINCE TWENTYELEVEN  ╙╙─ ───╜╜
         LLC © HTTPS://DESAIGN.APP
         ALL RIGHTS RESERVED
+        --
+        1-860-DESAIGN
+        meet@desaign.studio
+        PO BOX 200001, Austin, TX 78720
+        --
 -->
 
 </html>
