changing design signature

--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
         ALL RIGHTS RESERVED
         --
         1-860-DESAIGN
-        meet@desaign.studio
-        PO BOX 200001, Austin, TX 78720
+        MEET@DESAIGN.STUDIO
+        PO BOX 200001, AUSTIN, TX 78720
         --
 -->
 
