stop auto refresh page

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <!--just for auto-refresh or redirect use the following meta tag-->
-    <meta http-equiv="refresh" content="61">
+    <!-- <meta http-equiv="refresh" content="61"> -->
     <!--<meta http-equiv="refresh" content="0; url=http://website.com/" />-->
     <!-- For IE -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -53,12 +53,19 @@
             <div id="section2" data-toggle="tooltip" data-placement="bottom" title="YEAR QUARTER WEEK"></div>
         </div>
         <div class="row p-2 mr-3 float-left">
-            <div id="section3" data-toggle="tooltip" data-placement="bottom" title="YEAR QUARTER WEEK DAY HOUR MINUTE"></div>
+            <div id="section3" data-toggle="tooltip" data-placement="bottom" title="YEAR QUARTER WEEK DAY HOUR MINUTE">
+            </div>
         </div>
         <div class="row p-2 mr-3 float-left">
-            <div id="section4" data-toggle="tooltip" data-placement="bottom" title="YEAR MONTH DATE HOUR MINUTE SECOND"></div>
+            <div id="section4" data-toggle="tooltip" data-placement="bottom" title="YEAR MONTH DATE HOUR MINUTE SECOND">
+            </div>
         </div>
     </div>
+    <!-- End of main container -->
+    <nav class="navbar fixed-bottom navbar-expand-sm navbar-dark bg-dark mt-5">
+        <a class="navbar-brand" href="https://desaign.app">POWERED BY <span
+                class="text-warning">DESAIGN.STUDIO</span></a>
+    </nav>
     <!-- Optional JavaScript -->
     <script src="assets/js/connect.js"></script>
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
