--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="assets/css/bootstrap.css">
 
+    <!-- Main CSS -->
+    <link rel="stylesheet" href="assets/css/main.css">
+
 </head>
 
 <body id="app">
