title change in section 5

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             </div>
         </div>
         <div class="row p-2 mr-3 float-left">
-            <div id="section5" data-toggle="tooltip" data-placement="bottom" title="Number of milliseconds elapsed since January 1, 1970">
+            <div id="section5" data-toggle="tooltip" data-placement="bottom" title="Number of milliseconds since January 1, 1970">
             </div>
         </div>
     </div>
