section1 button interactivity change

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 <body id="app">
     <nav class="navbar navbar-light bg-light"><span class="navbar-brand mb-0 h1">PLOG</span></nav>
     <div class="container-fluid">
-        <div class="row my-2">
+        <div class="section1 row my-2">
             <div id="section1" data-toggle="tooltip" data-placement="bottom" title="CLICK TO COPY THE CODE"></div>
         </div>
         <div class="row p-2 mr-3 float-left">
