--- a/index.html
+++ b/index.html
@@ -67,6 +67,10 @@
             <div id="section5" data-toggle="tooltip" data-placement="bottom" title="Number of milliseconds since January 1, 1970">
             </div>
         </div>
+        <div class="row p-2 mr-3 float-left">
+            <div id="section6" data-toggle="tooltip" data-placement="bottom" title="Randomly Generate Password">
+            </div>
+        </div>
     </div>
     <!-- End of main container -->
     <nav class="navbar fixed-bottom navbar-expand-sm navbar-dark bg-dark mt-5">
