click to save password is ready

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             </div>
         </div>
         <div class="row p-2 mr-3 float-left">
-            <div id="section6" data-toggle="tooltip" data-placement="bottom" title="Randomly Generate Password">
+            <div id="section6" data-toggle="tooltip" data-placement="bottom" title="Randomly Generate Password" onclick="oneMinute()">
             </div>
         </div>
     </div>
