adding flip the coin

--- a/index.html
+++ b/index.html
@@ -71,6 +71,10 @@
             <div id="section6" data-toggle="tooltip" data-placement="bottom" title="Randomly Generate Password" onclick="oneMinute()">
             </div>
         </div>
+        <div class="row p-2 mr-3 float-left">
+            <div id="section7" data-toggle="tooltip" data-placement="bottom" title="Randomly Generate Password" onclick="flipCoin()">
+            </div>
+        </div>
     </div>
     <!-- End of main container -->
     <nav class="navbar fixed-bottom navbar-expand-sm navbar-dark bg-dark mt-5">
