title change in index

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             </div>
         </div>
         <div class="row p-2 mr-3 float-left">
-            <div id="section7" data-toggle="tooltip" data-placement="bottom" title="Randomly Generate Password" onclick="flipCoin()">
+            <div id="section7" data-toggle="tooltip" data-placement="bottom" title="Flip the Coin" onclick="flipCoin()">
             </div>
         </div>
     </div>
