adding Lorem Ipsum

--- a/index.html
+++ b/index.html
@@ -75,6 +75,10 @@
             <div id="section7" data-toggle="tooltip" data-placement="bottom" title="Flip the Coin" onclick="flipCoin()">
             </div>
         </div>
+        <div class="row p-2 mr-3 float-left">
+            <div id="section8" data-toggle="tooltip" data-placement="bottom" title="Lorem Ipsum">
+            </div>
+        </div>
     </div>
     <!-- End of main container -->
     <nav class="navbar fixed-bottom navbar-expand-sm navbar-dark bg-dark mt-5">
