Html Lorem Ipsum title updated

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             </div>
         </div>
         <div class="row p-2 mr-3 float-left">
-            <div id="section8" data-toggle="tooltip" data-placement="bottom" title="Lorem Ipsum">
+            <div id="section8" data-toggle="tooltip" data-placement="bottom" title="Copy Lorem Ipsum Text">
             </div>
         </div>
     </div>
