size resize updated

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 
 <!--
     ╥╥  DESIGNED AND DEVELOPED BY...
@@ -14,24 +14,27 @@
         LLC © HTTPS://DESAIGN.APP
         ALL RIGHTS RESERVED
 -->
-<!--[if IE 8 ]><html class="no-js oldie ie8" lang="en"> <![endif]-->
-<!--[if IE 9 ]><html class="no-js oldie ie9" lang="en"> <![endif]-->
+<!--[if IE 8]><html class="no-js oldie ie8" lang="en"> <![endif]-->
+<!--[if IE 9]><html class="no-js oldie ie9" lang="en"> <![endif]-->
 <!--[if (gte IE 9)|!(IE)]><!-->
 
 <html class="no-js" dir="ltr" lang="en-US">
-<!--<![endif]-->
+  <!--<![endif]-->
 
-<head>
+  <head>
     <title>PLOG</title>
     <!-- Required meta tags -->
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <!--just for auto-refresh or redirect use the following meta tag-->
     <!-- <meta http-equiv="refresh" content="61"> -->
     <!--<meta http-equiv="refresh" content="0; url=http://website.com/" />-->
     <!-- For IE -->
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <!--mobile specific metas-->
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
 
     <!--basic page needs-->
     <meta name="author" content="#DESAIGNER" />
@@ -39,51 +42,89 @@
     <meta name="keywords" content="Project Log" />
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="assets/css/bootstrap.css">
+    <link rel="stylesheet" href="assets/css/bootstrap.css" />
 
     <!-- Main CSS -->
-    <link rel="stylesheet" href="assets/css/main.css">
+    <link rel="stylesheet" href="assets/css/main.css" />
+  </head>
 
-</head>
-
-<body id="app">
-    <nav class="navbar navbar-light bg-light"><span class="navbar-brand mb-0 h1">PLOG</span></nav>
+  <body id="app">
+    <nav class="navbar navbar-light bg-light">
+      <span class="navbar-brand mb-0 h1">PLOG</span>
+    </nav>
     <div class="container-fluid">
-        <div class="section1 row my-2">
-            <div id="section1" data-toggle="tooltip" data-placement="bottom" title="CLICK TO COPY THE CODE"></div>
-        </div>
-        <div class="row p-2 mr-3 float-left">
-            <div id="section2" data-toggle="tooltip" data-placement="bottom" title="YEAR QUARTER WEEK"></div>
-        </div>
-        <div class="row p-2 mr-3 float-left">
-            <div id="section3" data-toggle="tooltip" data-placement="bottom" title="YEAR QUARTER WEEK DAY HOUR MINUTE">
-            </div>
-        </div>
-        <div class="row p-2 mr-3 float-left">
-            <div id="section4" data-toggle="tooltip" data-placement="bottom" title="YEAR MONTH DATE HOUR MINUTE SECOND">
-            </div>
-        </div>
-        <div class="row p-2 mr-3 float-left">
-            <div id="section5" data-toggle="tooltip" data-placement="bottom" title="Number of milliseconds since January 1, 1970">
-            </div>
-        </div>
-        <div class="row p-2 mr-3 float-left">
-            <div id="section6" data-toggle="tooltip" data-placement="bottom" title="Randomly Generate Password" onclick="oneMinute()">
-            </div>
-        </div>
-        <div class="row p-2 mr-3 float-left">
-            <div id="section7" data-toggle="tooltip" data-placement="bottom" title="Flip the Coin" onclick="flipCoin()">
-            </div>
-        </div>
-        <div class="row p-2 mr-3 float-left">
-            <div id="section8" data-toggle="tooltip" data-placement="bottom" title="Copy Lorem Ipsum Text">
-            </div>
-        </div>
+      <div class="section1 row my-2">
+        <div
+          id="section1"
+          data-toggle="tooltip"
+          data-placement="bottom"
+          title="CLICK TO COPY THE CODE"
+        ></div>
+      </div>
+      <div class="row p-2 mr-3 float-left">
+        <div
+          id="section2"
+          data-toggle="tooltip"
+          data-placement="bottom"
+          title="YEAR QUARTER WEEK"
+        ></div>
+      </div>
+      <div class="row p-2 mr-3 float-left">
+        <div
+          id="section3"
+          data-toggle="tooltip"
+          data-placement="bottom"
+          title="YEAR QUARTER WEEK DAY HOUR MINUTE"
+        ></div>
+      </div>
+      <div class="row p-2 mr-3 float-left">
+        <div
+          id="section4"
+          data-toggle="tooltip"
+          data-placement="bottom"
+          title="YEAR MONTH DATE HOUR MINUTE SECOND"
+        ></div>
+      </div>
+      <div class="row p-2 mr-3 float-left">
+        <div
+          id="section5"
+          data-toggle="tooltip"
+          data-placement="bottom"
+          title="Number of milliseconds since January 1, 1970"
+        ></div>
+      </div>
+      <div class="row p-2 mr-3 float-left">
+        <div
+          id="section6"
+          data-toggle="tooltip"
+          data-placement="bottom"
+          title="Randomly Generate Password"
+          onclick="oneMinute()"
+        ></div>
+      </div>
+      <div class="row p-2 mr-3 float-left">
+        <div
+          id="section7"
+          data-toggle="tooltip"
+          data-placement="bottom"
+          title="Flip the Coin"
+          onclick="flipCoin()"
+        ></div>
+      </div>
+      <div class="row p-2 mr-3 float-left">
+        <div
+          id="section8"
+          data-toggle="tooltip"
+          data-placement="bottom"
+          title="Copy Lorem Ipsum Text"
+        ></div>
+      </div>
     </div>
     <!-- End of main container -->
     <nav class="navbar fixed-bottom navbar-expand-sm navbar-dark bg-dark mt-5">
-        <a class="navbar-brand" href="https://desaign.app">POWERED BY <span
-                class="text-warning">DESAIGN.STUDIO</span></a>
+      <a class="navbar-brand" href="https://desaign.app"
+        >POWERED BY <span class="text-warning">DESAIGN.STUDIO</span></a
+      >
     </nav>
     <!-- Optional JavaScript -->
     <script src="assets/js/connect.js"></script>
@@ -93,10 +134,9 @@
     <script src="assets/js/bootstrap.js"></script>
     <script src="assets/js/moment.js"></script>
     <script src="assets/js/main.js"></script>
+  </body>
 
-</body>
-
-<!--
+  <!--
     ╥╥  DESIGNED AND DEVELOPED BY...
     ║║ 
     ║║ ╓╓──╖╖ ╓╓──── ────╖╖ ╓╖ ╓╓──╖╖ ╓╓──╖╖ TM
@@ -114,6 +154,4 @@
         MEET@DESAIGN.STUDIO
         PO BOX 200001, AUSTIN, TX 78720
         --
--->
-
-</html>
+--></html>
