--- a/index.html
+++ b/index.html
@@ -1,19 +1,29 @@
 <!DOCTYPE html>
 
 <!--
-    ╥╥  DESIGNED AND DEVELOPED BY...
-    ║║ 
-    ║║ ╓╓──╖╖ ╓╓──── ────╖╖ ╓╖ ╓╓──╖╖ ╓╓──╖╖ TM
-    ║║ ║║  ║║ ║║         ║║ ╙╜ ║║  ║║ ║║  ║║
-╓╓──╫╫ ╫╫──╜╜ ╙╙──╖╖ ╓╓──╫╫ ╖╖ ║║  ║║ ║║  ║║
-║║  ║║ ║║         ║║ ║║  ║║ ║║ ║║  ║║ ║║  ║║
-║║  ║║ ║║         ║║ ║║  ║║ ║║ ║║  ║║ ║║  ║║
-║║  ║║ ╙╙──── ────╜╜ ╙╙──╜╜ ║║ ╙╙──╫╫ ╜╜  ║║
-║║  ║║  .STUDIO             ║║     ║║     ╙╙
-╙╙──╜╜  SINCE TWENTYELEVEN  ╙╙─ ───╜╜
-        LLC © HTTPS://DESAIGN.APP
-        ALL RIGHTS RESERVED
+        ╥╥  DESIGNED AND DEVELOPED BY...
+        ║║ 
+        ║║ ╓╓──╖╖ ╓╓──── ────╖╖ ╓╖ ╓╓──╖╖ ╓╓──╖╖ TM
+        ║║ ║║  ║║ ║║         ║║ ╙╜ ║║  ║║ ║║  ║║
+    ╓╓──╫╫ ╫╫──╜╜ ╙╙──╖╖ ╓╓──╫╫ ╖╖ ║║  ║║ ║║  ║║
+    ║║  ║║ ║║         ║║ ║║  ║║ ║║ ║║  ║║ ║║  ║║
+    ║║  ║║ ║║         ║║ ║║  ║║ ║║ ║║  ║║ ║║  ║║
+    ║║  ║║ ╙╙──── ────╜╜ ╙╙──╜╜ ║║ ╙╙──╫╫ ╜╜  ║║
+    ║║  ║║  HTTPS://DESAIGN.APP ║║     ║║     ╙╙ LLC
+    ╙╙──╜╜  SINCE TWENTYELEVEN  ╙╙─ ───╜╜
+            Copyright © 2021
+            ALL RIGHTS RESERVED
+            --
+            Call: 1-860-DESAIGN
+            Mail: MEET@DESAIGN.STUDIO
+            Post: PO BOX 200001, AUSTIN TX 78720
+            --
+            Book an appointment with us at
+            https://calendly.com/desaignstudio
+            --
+            Follow us: #desaignstudio
 -->
+
 <!--[if IE 8]><html class="no-js oldie ie8" lang="en"> <![endif]-->
 <!--[if IE 9]><html class="no-js oldie ie9" lang="en"> <![endif]-->
 <!--[if (gte IE 9)|!(IE)]><!-->
@@ -22,24 +32,61 @@
   <!--<![endif]-->
 
   <head>
-    <title>PLOG</title>
-    <!-- Required meta tags -->
-    <meta charset="utf-8" />
-    <!--just for auto-refresh or redirect use the following meta tag-->
-    <!-- <meta http-equiv="refresh" content="61"> -->
-    <!--<meta http-equiv="refresh" content="0; url=http://website.com/" />-->
-    <!-- For IE -->
+    <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <!--mobile specific metas-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- ! just for auto-refresh or redirect use the following meta tag -->
+    <!-- <meta http-equiv="refresh" content="61"> -->
+    <!-- <meta http-equiv="refresh" content="0; url=http://website.com/" /> -->
+    <!-- ! -->
+    <!--basic page needs-->
+    <meta name="author" content="Desaign Studio" />
     <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+      name="description"
+      content="Project Logs, Time Logs, Password Generator, Lorem Ipsum, ¯\_(ツ)_/¯ etc."
+    />
+    <meta
+      name="keywords"
+      content="Project Log, Time Logs, Password Generator, Lorem Ipsum, ¯\_(ツ)_/ etc."
     />
 
-    <!--basic page needs-->
-    <meta name="author" content="#DESAIGNER" />
-    <meta name="description" content="¯\_(ツ)_/¯" />
-    <meta name="keywords" content="Project Log" />
+    <title>PLOG | Desaign Studio</title>
+
+    <!-- Disable tap highlight on IE -->
+    <meta name="msapplication-tap-highlight" content="no" />
+
+    <!-- Web Application Manifest -->
+    <link rel="manifest" href="./manifest/manifest.json" />
+
+    <!-- Add to homescreen for Chrome on Android -->
+    <meta name="mobile-web-app-capable" content="yes" />
+    <meta name="application-name" content="Web Starter Kit" />
+    <link
+      rel="icon"
+      sizes="192x192"
+      href="./manifest/images/touch/chrome-touch-icon-192x192.png"
+    />
+
+    <!-- Add to homescreen for Safari on iOS -->
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+    <meta name="apple-mobile-web-app-title" content="Web Starter Kit" />
+    <link rel="apple-touch-icon" href="./manifest/images/touch/apple-touch-icon.png" />
+
+    <!-- Tile icon for Win8 (144x144 + tile color) -->
+    <meta
+      name="msapplication-TileImage"
+      content="./manifest/images/touch/ms-touch-icon-144x144-precomposed.png"
+    />
+    <meta name="msapplication-TileColor" content="#003355" />
+
+    <!-- Color the status bar on mobile devices -->
+    <meta name="theme-color" content="#003355" />
+
+    <!-- @critical -- change text -- Humans Text -->
+    <link type="text/plain" rel="author" href="./manifest/humans.txt" />
+    <!-- @critical -- change upon your site -- Robots -->
+    <!-- <meta name="robots" content="noindex, nofollow" /> -->
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="assets/css/bootstrap.css" />
@@ -137,21 +184,25 @@
   </body>
 
   <!--
-    ╥╥  DESIGNED AND DEVELOPED BY...
-    ║║ 
-    ║║ ╓╓──╖╖ ╓╓──── ────╖╖ ╓╖ ╓╓──╖╖ ╓╓──╖╖ TM
-    ║║ ║║  ║║ ║║         ║║ ╙╜ ║║  ║║ ║║  ║║
-╓╓──╫╫ ╫╫──╜╜ ╙╙──╖╖ ╓╓──╫╫ ╖╖ ║║  ║║ ║║  ║║
-║║  ║║ ║║         ║║ ║║  ║║ ║║ ║║  ║║ ║║  ║║
-║║  ║║ ║║         ║║ ║║  ║║ ║║ ║║  ║║ ║║  ║║
-║║  ║║ ╙╙──── ────╜╜ ╙╙──╜╜ ║║ ╙╙──╫╫ ╜╜  ║║
-║║  ║║  .STUDIO             ║║     ║║     ╙╙ LLC
-╙╙──╜╜  SINCE TWENTYELEVEN  ╙╙─ ───╜╜
-        LLC © HTTPS://DESAIGN.APP
-        ALL RIGHTS RESERVED
-        --
-        1-860-DESAIGN
-        MEET@DESAIGN.STUDIO
-        PO BOX 200001, AUSTIN, TX 78720
-        --
+        ╥╥  DESIGNED AND DEVELOPED BY...
+        ║║ 
+        ║║ ╓╓──╖╖ ╓╓──── ────╖╖ ╓╖ ╓╓──╖╖ ╓╓──╖╖ TM
+        ║║ ║║  ║║ ║║         ║║ ╙╜ ║║  ║║ ║║  ║║
+    ╓╓──╫╫ ╫╫──╜╜ ╙╙──╖╖ ╓╓──╫╫ ╖╖ ║║  ║║ ║║  ║║
+    ║║  ║║ ║║         ║║ ║║  ║║ ║║ ║║  ║║ ║║  ║║
+    ║║  ║║ ║║         ║║ ║║  ║║ ║║ ║║  ║║ ║║  ║║
+    ║║  ║║ ╙╙──── ────╜╜ ╙╙──╜╜ ║║ ╙╙──╫╫ ╜╜  ║║
+    ║║  ║║  HTTPS://DESAIGN.APP ║║     ║║     ╙╙ LLC
+    ╙╙──╜╜  SINCE TWENTYELEVEN  ╙╙─ ───╜╜
+            Copyright © 2021
+            ALL RIGHTS RESERVED
+            --
+            Call: 1-860-DESAIGN
+            Mail: MEET@DESAIGN.STUDIO
+            Post: PO BOX 200001, AUSTIN TX 78720
+            --
+            Book an appointment with us at
+            https://calendly.com/desaignstudio
+            --
+            Follow us: #desaignstudio
 --></html>
