--- a/index.html
+++ b/index.html
@@ -60,17 +60,17 @@
 
     <!-- Add to homescreen for Chrome on Android -->
     <meta name="mobile-web-app-capable" content="yes" />
-    <meta name="application-name" content="Web Starter Kit" />
+    <meta name="application-name" content="PLOG by Desaign Studio" />
     <link
       rel="icon"
       sizes="192x192"
-      href="./manifest/images/touch/chrome-touch-icon-192x192.png"
+      href="./manifest/images/favicon.ico"
     />
 
     <!-- Add to homescreen for Safari on iOS -->
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-    <meta name="apple-mobile-web-app-title" content="Web Starter Kit" />
+    <meta name="apple-mobile-web-app-title" content="PLOG by Desaign Studio" />
     <link rel="apple-touch-icon" href="./manifest/images/touch/apple-touch-icon.png" />
 
     <!-- Tile icon for Win8 (144x144 + tile color) -->
