--- a/index.html
+++ b/index.html
@@ -1,25 +1,212 @@
 <!DOCTYPE html>
+
 <!--#
-      ╥╥  DESIGNED AND DEVELOPED BY...
-      ║║ 
-      ║║ ╓╓──╖╖ ╓╓──── ────╖╖ ╓╖ ╓╓──╖╖ ╓╓──╖╖ TM
-      ║║ ║║  ║║ ║║         ║║ ╙╜ ║║  ║║ ║║  ║║
-  ╓╓──╫╫ ╫╫──╜╜ ╙╙──╖╖ ╓╓──╫╫ ╖╖ ║║  ║║ ║║  ║║
-  ║║  ║║ ║║         ║║ ║║  ║║ ║║ ║║  ║║ ║║  ║║
-  ║║  ║║ ║║         ║║ ║║  ║║ ║║ ║║  ║║ ║║  ║║
-  ║║  ║║ ╙╙──── ────╜╜ ╙╙──╜╜ ║║ ╙╙──╫╫ ╜╜  ║║
-  ║║  ║║  HTTPS://DESAIGN.APP ║║     ║║     ╙╙ LLC
-  ╙╙──╜╜  SINCE TWENTYELEVEN  ╙╙─ ───╜╜
-          Copyright © 2021
-          ALL RIGHTS RESERVED
-          --
-          Call: 1-860-DESAIGN
-          Mail: MEET@DESAIGN.STUDIO
-          Post: PO BOX 200001, AUSTIN TX 78720
-          --
-          Book an appointment with us at
-          https://calendly.com/desaignstudio
-          --
-          Follow us: #desaignstudio 
+        ╥╥  DESIGNED AND DEVELOPED BY...
+        ║║ 
+        ║║ ╓╓──╖╖ ╓╓──── ────╖╖ ╓╖ ╓╓──╖╖ ╓╓──╖╖ TM
+        ║║ ║║  ║║ ║║         ║║ ╙╜ ║║  ║║ ║║  ║║
+    ╓╓──╫╫ ╫╫──╜╜ ╙╙──╖╖ ╓╓──╫╫ ╖╖ ║║  ║║ ║║  ║║
+    ║║  ║║ ║║         ║║ ║║  ║║ ║║ ║║  ║║ ║║  ║║
+    ║║  ║║ ║║         ║║ ║║  ║║ ║║ ║║  ║║ ║║  ║║
+    ║║  ║║ ╙╙──── ────╜╜ ╙╙──╜╜ ║║ ╙╙──╫╫ ╜╜  ║║
+    ║║  ║║  HTTPS://DESAIGN.APP ║║     ║║     ╙╙ LLC
+    ╙╙──╜╜  SINCE TWENTYELEVEN  ╙╙─ ───╜╜
+            Copyright © 2021
+            ALL RIGHTS RESERVED
+            --
+            Call: 1-860-DESAIGN
+            Mail: MEET@DESAIGN.STUDIO
+            Post: PO BOX 200001, AUSTIN TX 78720
+            --
+            Book an appointment with us at
+            https://calendly.com/desaignstudio
+            --
+            Follow us: #desaignstudio
 #-->
-<html class="no-js" dir="ltr" lang="en-US"><head><meta charset="UTF-8" /><meta http-equiv="X-UA-Compatible" content="IE=edge" /><meta name="viewport" content="width=device-width, initial-scale=1.0" /><meta name="author" content="Desaign Studio" /><meta name="description" content="Project Logs, Time Logs, Password Generator, Lorem Ipsum, ¯\_(ツ)_/¯ etc." /><meta name="keywords" content="Project Log, Time Logs, Password Generator, Lorem Ipsum, ¯\_(ツ)_/ etc." /><title>PLOG | Desaign Studio</title><meta name="msapplication-tap-highlight" content="no" /><link rel="manifest" href="./manifest/manifest.json" /><meta name="mobile-web-app-capable" content="yes" /><meta name="application-name" content="PLOG by Desaign Studio" /><link rel="icon" sizes="192x192" href="./manifest/images/favicon.ico" /><meta name="apple-mobile-web-app-capable" content="yes" /><meta name="apple-mobile-web-app-status-bar-style" content="black" /><meta name="apple-mobile-web-app-title" content="PLOG by Desaign Studio" /><link rel="apple-touch-icon" href="./manifest/images/touch/black.png" /><meta name="msapplication-TileImage" content="./manifest/images/touch/blue.png" /><meta name="msapplication-TileColor" content="#003355" /><meta name="theme-color" content="#003355" /><link type="text/plain" rel="author" href="./manifest/humans.txt" /><link rel="stylesheet" href="assets/css/bootstrap.css" /><link rel="stylesheet" href="assets/css/main.css" /></head><body id="app"><nav class="navbar navbar-light bg-light"><span class="navbar-brand mb-0 h1">PLOG</span></nav><div class="container-fluid"><div class="section1 row my-2"><div id="section1" data-toggle="tooltip" data-placement="bottom" title="CLICK ANY BOX TO COPY THE TEXT" ></div></div><div class="row p-2 mr-3 float-left"><div id="section2" data-toggle="tooltip" data-placement="bottom" title="YEAR QUARTER WEEK" ></div></div><div class="row p-2 mr-3 float-left"><div id="section3" data-toggle="tooltip" data-placement="bottom" title="YEAR QUARTER WEEK DAY HOUR MINUTE" ></div></div><div class="row p-2 mr-3 float-left"><div id="section4" data-toggle="tooltip" data-placement="bottom" title="YEAR MONTH DATE HOUR MINUTE SECOND" ></div></div><div class="row p-2 mr-3 float-left"><div id="section5" data-toggle="tooltip" data-placement="bottom" title="Number of milliseconds since January 1, 1970" ></div></div><div class="row p-2 mr-3 float-left"><div id="section6" data-toggle="tooltip" data-placement="bottom" title="Randomly Generate Password" onclick="oneMinute()" ></div></div><div class="row p-2 mr-3 float-left"><div id="section7" data-toggle="tooltip" data-placement="bottom" title="Flip the Coin" onclick="flipCoin()" ></div></div><div class="row p-2 mr-3 float-left"><div id="section8" data-toggle="tooltip" data-placement="bottom" title="Copy Lorem Ipsum Text" ></div></div></div><nav class="navbar fixed-bottom navbar-expand-sm navbar-dark bg-dark mt-5"><a class="navbar-brand" href="https://desaign.app" >POWERED BY <span class="text-warning">DESAIGN.STUDIO</span></a ></nav><script src="assets/js/connect.js"></script><script src="assets/js/jQuery.js"></script><script src="assets/js/popper.js"></script><script src="assets/js/bootstrap.js"></script><script src="assets/js/moment.js"></script><script src="assets/js/main.js"></script></body></html>
+
+<!--[if IE 8]><html class="no-js oldie ie8" lang="en"> <![endif]-->
+<!--[if IE 9]><html class="no-js oldie ie9" lang="en"> <![endif]-->
+<!--[if (gte IE 9)|!(IE)]><!-->
+
+<html class="no-js" dir="ltr" lang="en-US">
+  <!--<![endif]-->
+
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- ! just for auto-refresh or redirect use the following meta tag -->
+    <!-- <meta http-equiv="refresh" content="61"> -->
+    <!-- <meta http-equiv="refresh" content="0; url=http://website.com/" /> -->
+    <!-- ! -->
+    <!--basic page needs-->
+    <meta name="author" content="Desaign Studio" />
+    <meta
+      name="description"
+      content="Project Logs, Time Logs, Password Generator, Lorem Ipsum, ¯\_(ツ)_/¯ etc."
+    />
+    <meta
+      name="keywords"
+      content="Project Log, Time Logs, Password Generator, Lorem Ipsum, ¯\_(ツ)_/ etc."
+    />
+
+    <title>PLOG | Desaign Studio</title>
+
+    <!-- Disable tap highlight on IE -->
+    <meta name="msapplication-tap-highlight" content="no" />
+
+    <!-- Web Application Manifest -->
+    <link rel="manifest" href="./manifest/manifest.json" />
+
+    <!-- Add to homescreen for Chrome on Android -->
+    <meta name="mobile-web-app-capable" content="yes" />
+    <meta name="application-name" content="PLOG by Desaign Studio" />
+    <link
+      rel="icon"
+      sizes="192x192"
+      href="./manifest/images/favicon.ico"
+    />
+
+    <!-- Add to homescreen for Safari on iOS -->
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+    <meta name="apple-mobile-web-app-title" content="PLOG by Desaign Studio" />
+    <link rel="apple-touch-icon" href="./manifest/images/touch/black.png" />
+
+    <!-- Tile icon for Win8 (144x144 + tile color) -->
+    <meta
+      name="msapplication-TileImage"
+      content="./manifest/images/touch/blue.png"
+    />
+    <meta name="msapplication-TileColor" content="#003355" />
+
+    <!-- Color the status bar on mobile devices -->
+    <meta name="theme-color" content="#003355" />
+
+    <!-- @critical -- change text -- Humans Text -->
+    <link type="text/plain" rel="author" href="./manifest/humans.txt" />
+    <!-- @critical -- change upon your site -- Robots -->
+    <!-- <meta name="robots" content="noindex, nofollow" /> -->
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="assets/css/bootstrap.css" />
+
+    <!-- Main CSS -->
+    <link rel="stylesheet" href="assets/css/main.css" />
+  </head>
+
+  <body id="app">
+    <nav class="navbar navbar-light bg-light">
+      <span class="navbar-brand mb-0 h1">PLOG</span>
+    </nav>
+    <div class="container-fluid">
+      <div class="section1 row my-2">
+        <div
+          id="section1"
+          data-toggle="tooltip"
+          data-placement="bottom"
+          title="CLICK TO COPY THE CODE"
+        ></div>
+      </div>
+      <div class="row p-2 mr-3 float-left">
+        <div
+          id="section2"
+          data-toggle="tooltip"
+          data-placement="bottom"
+          title="YEAR QUARTER WEEK"
+        ></div>
+      </div>
+      <div class="row p-2 mr-3 float-left">
+        <div
+          id="section3"
+          data-toggle="tooltip"
+          data-placement="bottom"
+          title="YEAR QUARTER WEEK DAY HOUR MINUTE"
+        ></div>
+      </div>
+      <div class="row p-2 mr-3 float-left">
+        <div
+          id="section4"
+          data-toggle="tooltip"
+          data-placement="bottom"
+          title="YEAR MONTH DATE HOUR MINUTE SECOND"
+        ></div>
+      </div>
+      <div class="row p-2 mr-3 float-left">
+        <div
+          id="section5"
+          data-toggle="tooltip"
+          data-placement="bottom"
+          title="Number of milliseconds since January 1, 1970"
+        ></div>
+      </div>
+      <div class="row p-2 mr-3 float-left">
+        <div
+          id="section6"
+          data-toggle="tooltip"
+          data-placement="bottom"
+          title="Randomly Generate Password"
+          onclick="oneMinute()"
+        ></div>
+      </div>
+      <div class="row p-2 mr-3 float-left">
+        <div
+          id="section7"
+          data-toggle="tooltip"
+          data-placement="bottom"
+          title="Flip the Coin"
+          onclick="flipCoin()"
+        ></div>
+      </div>
+      <div class="row p-2 mr-3 float-left">
+        <div
+          id="section8"
+          data-toggle="tooltip"
+          data-placement="bottom"
+          title="Copy Lorem Ipsum Text"
+        ></div>
+      </div>
+    </div>
+    <!-- End of main container -->
+    <nav class="navbar fixed-bottom navbar-expand-sm navbar-dark bg-dark mt-5">
+      <a class="navbar-brand" href="https://desaign.app"
+        >POWERED BY <span class="text-warning">DESAIGN.STUDIO</span></a
+      >
+    </nav>
+    <!-- Optional JavaScript -->
+    <script src="assets/js/connect.js"></script>
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="assets/js/jQuery.js"></script>
+    <script src="assets/js/popper.js"></script>
+    <script src="assets/js/bootstrap.js"></script>
+    <script src="assets/js/moment.js"></script>
+    <script src="assets/js/main.js"></script>
+  </body>
+
+
+<!--#
+        ╥╥  DESIGNED AND DEVELOPED BY...
+        ║║ 
+        ║║ ╓╓──╖╖ ╓╓──── ────╖╖ ╓╖ ╓╓──╖╖ ╓╓──╖╖ TM
+        ║║ ║║  ║║ ║║         ║║ ╙╜ ║║  ║║ ║║  ║║
+    ╓╓──╫╫ ╫╫──╜╜ ╙╙──╖╖ ╓╓──╫╫ ╖╖ ║║  ║║ ║║  ║║
+    ║║  ║║ ║║         ║║ ║║  ║║ ║║ ║║  ║║ ║║  ║║
+    ║║  ║║ ║║         ║║ ║║  ║║ ║║ ║║  ║║ ║║  ║║
+    ║║  ║║ ╙╙──── ────╜╜ ╙╙──╜╜ ║║ ╙╙──╫╫ ╜╜  ║║
+    ║║  ║║  HTTPS://DESAIGN.APP ║║     ║║     ╙╙ LLC
+    ╙╙──╜╜  SINCE TWENTYELEVEN  ╙╙─ ───╜╜
+            Copyright © 2021
+            ALL RIGHTS RESERVED
+            --
+            Call: 1-860-DESAIGN
+            Mail: MEET@DESAIGN.STUDIO
+            Post: PO BOX 200001, AUSTIN TX 78720
+            --
+            Book an appointment with us at
+            https://calendly.com/desaignstudio
+            --
+            Follow us: #desaignstudio
+#-->
+
+
+</html>
