images and manifest updated

--- a/index.html
+++ b/index.html
@@ -64,28 +64,28 @@
     <link
       rel="icon"
       sizes="192x192"
-      href="./manifest/images/favicon.ico"
+      href="https://desaign.app/clients/cli/images/1x/favicon.ico"
     />
 
     <!-- Add to homescreen for Safari on iOS -->
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     <meta name="apple-mobile-web-app-title" content="PLOG by Desaign Studio" />
-    <link rel="apple-touch-icon" href="./manifest/images/touch/black.png" />
+    <link rel="apple-touch-icon" href="https://desaign.app/clients/cli/images/1x/black.png" />
 
     <!-- Tile icon for Win8 (144x144 + tile color) -->
     <meta
       name="msapplication-TileImage"
-      content="./manifest/images/touch/blue.png"
+      content="https://desaign.app/clients/cli/images/1x/blue.png"
     />
     <meta name="msapplication-TileColor" content="#003355" />
 
     <!-- Color the status bar on mobile devices -->
     <meta name="theme-color" content="#003355" />
 
-    <!-- @critical -- change text -- Humans Text -->
+    <!-- Humans Text -->
     <link type="text/plain" rel="author" href="./manifest/humans.txt" />
-    <!-- @critical -- change upon your site -- Robots -->
+    <!-- Robots -->
     <!-- <meta name="robots" content="noindex, nofollow" /> -->
 
     <!-- Bootstrap CSS -->
