Updated index copy

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
   <body id="app">
     <nav class="navbar navbar-light bg-light">
-      <span class="navbar-brand mb-0 h1">PLOG</span>
+      <span class="navbar-brand mb-0 h1">PROJECT LOG</span>
     </nav>
     <div class="container-fluid">
       <div class="section1 row my-2">
