--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
   </head>
 
   <body id="app">
+    <audio id="audio" src="./assets/music/coin.wav"></audio>
     <nav class="navbar navbar-light bg-light">
       <span class="navbar-brand mb-0 h1">PROJECT LOG</span>
     </nav>
@@ -117,7 +118,7 @@
       <a class="navbar-brand" href="https://desaign.app">POWERED BY <span class="text-warning">DESAIGN.STUDIO</span></a>
     </nav>
     <!-- Optional JavaScript -->
-    <script src="assets/js/connect.js"></script>
+<!--     <script src="assets/js/connect.js"></script> -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="assets/js/jQuery.js"></script>
     <script src="assets/js/popper.js"></script>
