Random words password button added

--- a/index.html
+++ b/index.html
@@ -112,6 +112,9 @@
       <div class="row p-2 mr-3 float-left">
         <div id="section8" data-toggle="tooltip" data-placement="bottom" title="Copy Lorem Ipsum Text"></div>
       </div>
+      <div class="row p-2 mr-3 float-left">
+        <div id="section9" data-toggle="tooltip" data-placement="bottom" title="Word Random" onclick="oneMinute()"></div>
+      </div>
     </div>
     <!-- End of main container -->
     <nav class="navbar fixed-bottom navbar-expand-sm navbar-dark bg-dark mt-5">
@@ -124,7 +127,7 @@
     <script src="assets/js/popper.js"></script>
     <script src="assets/js/bootstrap.js"></script>
     <script src="assets/js/moment.js"></script>
-    <script src="assets/js/main.js"></script>
+    <script src="assets/js/main-min.jsƒ"></script>
   </body>
 
   <!--#
