--- a/index.html
+++ b/index.html
@@ -41,8 +41,14 @@
     <!-- ! -->
     <!--basic page needs-->
     <meta name="author" content="Desaign Studio" />
-    <meta name="description" content="Project Logs, Time Logs, Password Generator, Lorem Ipsum, ¯\_(ツ)_/¯ etc." />
-    <meta name="keywords" content="Project Log, Time Logs, Password Generator, Lorem Ipsum, ¯\_(ツ)_/ etc." />
+    <meta
+      name="description"
+      content="Project Logs, Time Logs, Password Generator, Lorem Ipsum, ¯\_(ツ)_/¯ etc."
+    />
+    <meta
+      name="keywords"
+      content="Project Log, Time Logs, Password Generator, Lorem Ipsum, ¯\_(ツ)_/ etc."
+    />
 
     <title>PLOG | Desaign Studio</title>
 
@@ -55,16 +61,26 @@
     <!-- Add to homescreen for Chrome on Android -->
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="application-name" content="PLOG by Desaign Studio" />
-    <link rel="icon" sizes="192x192" href="https://desaign.app/clients/cli/images/1x/favicon.ico" />
+    <link
+      rel="icon"
+      sizes="192x192"
+      href="https://desaign.app/clients/cli/images/1x/favicon.ico"
+    />
 
     <!-- Add to homescreen for Safari on iOS -->
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     <meta name="apple-mobile-web-app-title" content="PLOG by Desaign Studio" />
-    <link rel="apple-touch-icon" href="https://desaign.app/clients/cli/images/1x/black.png" />
+    <link
+      rel="apple-touch-icon"
+      href="https://desaign.app/clients/cli/images/1x/black.png"
+    />
 
     <!-- Tile icon for Win8 (144x144 + tile color) -->
-    <meta name="msapplication-TileImage" content="https://desaign.app/clients/cli/images/1x/blue.png" />
+    <meta
+      name="msapplication-TileImage"
+      content="https://desaign.app/clients/cli/images/1x/blue.png"
+    />
     <meta name="msapplication-TileColor" content="#003355" />
 
     <!-- Color the status bar on mobile devices -->
@@ -89,45 +105,95 @@
     </nav>
     <div class="container-fluid">
       <div class="section1 row my-2">
-        <div id="section1" data-toggle="tooltip" data-placement="bottom" title="CLICK TO COPY THE CODE"></div>
+        <div
+          id="section1"
+          data-toggle="tooltip"
+          data-placement="bottom"
+          title="CLICK TO COPY THE CODE"
+        ></div>
       </div>
       <div class="row p-2 mr-3 float-left">
-        <div id="section2" data-toggle="tooltip" data-placement="bottom" title="YEAR QUARTER WEEK"></div>
+        <div
+          id="section2"
+          data-toggle="tooltip"
+          data-placement="bottom"
+          title="YEAR QUARTER WEEK"
+        ></div>
       </div>
       <div class="row p-2 mr-3 float-left">
-        <div id="section3" data-toggle="tooltip" data-placement="bottom" title="YEAR QUARTER WEEK DAY HOUR MINUTE"></div>
+        <div
+          id="section3"
+          data-toggle="tooltip"
+          data-placement="bottom"
+          title="YEAR QUARTER WEEK DAY HOUR MINUTE"
+        ></div>
       </div>
       <div class="row p-2 mr-3 float-left">
-        <div id="section4" data-toggle="tooltip" data-placement="bottom" title="YEAR MONTH DATE HOUR MINUTE SECOND"></div>
+        <div
+          id="section4"
+          data-toggle="tooltip"
+          data-placement="bottom"
+          title="YEAR MONTH DATE HOUR MINUTE SECOND"
+        ></div>
       </div>
       <div class="row p-2 mr-3 float-left">
-        <div id="section5" data-toggle="tooltip" data-placement="bottom" title="Number of milliseconds since January 1, 1970"></div>
+        <div
+          id="section5"
+          data-toggle="tooltip"
+          data-placement="bottom"
+          title="Number of milliseconds since January 1, 1970"
+        ></div>
       </div>
       <div class="row p-2 mr-3 float-left">
-        <div id="section6" data-toggle="tooltip" data-placement="bottom" title="Randomly Generate Password" onclick="oneMinute()"></div>
+        <div
+          id="section6"
+          data-toggle="tooltip"
+          data-placement="bottom"
+          title="Randomly Generate Password"
+          onclick="oneMinute()"
+        ></div>
       </div>
       <div class="row p-2 mr-3 float-left">
-        <div id="section7" data-toggle="tooltip" data-placement="bottom" title="Flip the Coin" onclick="flipCoin()"></div>
+        <div
+          id="section7"
+          data-toggle="tooltip"
+          data-placement="bottom"
+          title="Flip the Coin"
+          onclick="flipCoin()"
+        ></div>
       </div>
       <div class="row p-2 mr-3 float-left">
-        <div id="section8" data-toggle="tooltip" data-placement="bottom" title="Copy Lorem Ipsum Text"></div>
+        <div
+          id="section8"
+          data-toggle="tooltip"
+          data-placement="bottom"
+          title="Copy Lorem Ipsum Text"
+        ></div>
       </div>
       <div class="row p-2 mr-3 float-left">
-        <div id="section9" data-toggle="tooltip" data-placement="bottom" title="Word Random" onclick="oneMinute()"></div>
+        <div
+          id="section9"
+          data-toggle="tooltip"
+          data-placement="bottom"
+          title="Word Random"
+          onclick="oneMinute()"
+        ></div>
       </div>
     </div>
     <!-- End of main container -->
     <nav class="navbar fixed-bottom navbar-expand-sm navbar-dark bg-dark mt-5">
-      <a class="navbar-brand" href="https://desaign.app">POWERED BY <span class="text-warning">DESAIGN.STUDIO</span></a>
+      <a class="navbar-brand" href="https://desaign.app"
+        >POWERED BY <span class="text-warning">DESAIGN.STUDIO</span></a
+      >
     </nav>
     <!-- Optional JavaScript -->
-<!--     <script src="assets/js/connect.js"></script> -->
+    <!--     <script src="assets/js/connect.js"></script> -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="assets/js/jQuery.js"></script>
     <script src="assets/js/popper.js"></script>
     <script src="assets/js/bootstrap.js"></script>
     <script src="assets/js/moment.js"></script>
-    <script src="assets/js/main-min.jsƒ"></script>
+    <script src="assets/js/main-min.js"></script>
   </body>
 
   <!--#
